Don't depend on PangoXft. Patch by Behdad Esfahbod <mozilla@behdad.org>. b=349906, r=jshin, sr=rbs